-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.0 Beta3
-
None
-
f6f869981 (6.6), 4fcadf6a3 (dev)
With 6.6.0 beta3 the QtCore/plugins.qmltypes seems to contain bad revision data, qmllint complains:
Warning: /.../Main.qml:4:1: Warnings occurred while importing module "QtCore": [import] import QtCore ^^^^^^ --- Warning: /usr/local/Qt/6.6.0/macos/qml/QtCore/plugins.qmltypes:67:37: Meta object revision and export version differ. Revision 65286 corresponds to version 255.6; it should be 6.6. /usr/local/Qt/6.6.0/macos/qml/QtCore/plugins.qmltypes:99:37: Meta object revision and export version differ. Revision 65286 corresponds to version 255.6; it should be 6.6. /usr/local/Qt/6.6.0/macos/qml/QtCore/plugins.qmltypes:129:37: Meta object revision and export version differ. Revision 65286 corresponds to version 255.6; it should be 6.6. /usr/local/Qt/6.6.0/macos/qml/QtCore/plugins.qmltypes:152:37: Meta object revision and export version differ. Revision 65286 corresponds to version 255.6; it should be 6.6. /usr/local/Qt/6.6.0/macos/qml/QtCore/plugins.qmltypes:182:37: Meta object revision and export version differ. Revision 65286 corresponds to version 255.6; it should be 6.6. /usr/local/Qt/6.6.0/macos/qml/QtCore/plugins.qmltypes:205:37: Meta object revision and export version differ. Revision 65286 corresponds to version 255.6; it should be 6.6. [import] ---