QML Permissions: Use correct version tagging macro

QML_ADDED_IN_MINOR_VERSION results in wrong qmltypes entries, "(max
version).6" instead of "6.6"

Fixes: QTBUG-116390
Change-Id: I6ed83cabaeae24bea9078b929ff0204ba635764b
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 4fcadf6a36aca48c5cfb0cc717c30211f5be0ba8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>